--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
+    "react-stepper-horizontal": "^1.0.11",
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
